--- a/src/scss/sections/_technics.scss
+++ b/src/scss/sections/_technics.scss
@@ -11,30 +11,37 @@
         align-items: center;
         padding: 70px 0;
         background-color: $second-brown;
+        @include breakpoint($mobile-bp) {
+          flex-direction: column;
+            padding: 20px;
+        }
     }
-    // &__left,
-    // &__right {
-    //     width: 50%;
-    // }
+
     &__right {
         padding-left: 100px;
         max-width: 638px;
         width: 100%;
+        @include breakpoint($mobile-bp) {
+           padding-left: 0;
+            text-align: center;
+        }
     }
     &__image {
         display: flex;
         justify-content: center;
+        @include breakpoint($mobile-bp) {
+            margin-bottom: 25px;
+        }
         img {
             display: block;
             width: 100%;
         }
     }
     &__title {
-        font-family: $righteous-regular;
-        font-size: 48px;
-        line-height: 50px;
-        color: $white;
-        margin-bottom: 36px;
+      text-align: start;
+        @include breakpoint($mobile-bp) {
+            text-align: center;
+        }
     }
     &__text {
         font-family: $urbanist-medium;
