--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,8 @@ body {
 @import "./components/btns";
 @import "./components/footer";
 @import "./components/header";
+@import "./components/title";
+@import "./components/subtitle";
 @import "./sections/hero";
 @import "./sections/instruction";
 @import "./sections/about-us";
