--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -12,4 +12,9 @@
     &:hover {
         opacity: 0.8;
     }
+    @include breakpoint($mobile-bp) {
+        font-size: 16px;
+        line-height: 18px;
+        padding: 20px 15px;
+    }
 }
