--- a/src/scss/sections/_about-us.scss
+++ b/src/scss/sections/_about-us.scss
@@ -7,14 +7,31 @@
         grid-column-gap: 32px;
         grid-row-gap: 32px;
         justify-content: center;
+        @include breakpoint($tablet-bp) {
+            display: grid;
+            grid-template-columns: 47% 47%;
+            grid-template-rows: repeat(3, 1fr);
+        }
+        @include breakpoint($mobile-bp) {
+            display: block;
+        }
         &-item-1 {
             grid-area: 1 / 1 / 2 / 2;
+            @include breakpoint($mobile-bp) {
+              display: none;
+            }
         }
         &-item-2 {
             grid-area: 2 / 1 / 3 / 2;
+            @include breakpoint($mobile-bp) {
+                display: none;
+            }
         }
         &-item-3 {
             grid-area: 1 / 2 / 3 / 3;
+            @include breakpoint($mobile-bp) {
+                display: none;
+            }
         }
         &-item-4 {
             grid-area: 1 / 3 / 3 / 4;
@@ -23,26 +40,23 @@
             justify-content: center;
             background-color: $second-brown;
             padding: 25px 52px;
+            @include breakpoint($tablet-bp) {
+                grid-area: 3 / 1 / 5 / 3;
+            }
+            @include breakpoint($tablet-bp) {
+                padding: 25px 10px;
+            }
         }
     }
     img {
         display: block;
         width: 100%;
     }
-    &__subtitle {
-        font-family: $urbanist-semiBold;
-        font-size: 18px;
-        line-height: 20px;
-        color: $light-brown;
-        margin-bottom: 12px;
+    &__subtitle,
+    &__title{
+        text-align: start;
     }
-    &__title {
-        font-family: $righteous-regular;
-        font-size: 48px;
-        line-height: 62px;
-        color: $white;
-        margin-bottom: 36px;
-    }
+
     &__text {
         font-family: $urbanist-medium;
         font-size: 16px;
