--- a/src/scss/sections/_menu.scss
+++ b/src/scss/sections/_menu.scss
@@ -3,22 +3,6 @@
   &__container{
     max-width: 1200px;
   }
-  &__subtitle {
-    font-family: $urbanist-semiBold, $sans-serif;
-    font-size: 18px;
-    line-height: 20px;
-    color: $light-brown;
-    text-align: center;
-    margin-bottom: 12px;
-  }
-  &__title {
-    font-family: $righteous-regular, $sans-serif;
-    font-size: 48px;
-    line-height: 50px;
-    color: $white;
-    text-align: center;
-    margin-bottom: 56px;
-  }
   &__text{
     font-family: $righteous-regular, $sans-serif;
     font-size: 24px;
@@ -26,12 +10,21 @@
     color: $white;
     margin-left: 20px;
     margin-right: auto;
+    @include breakpoint($mobile-bp) {
+      font-size: 16px;
+      line-height: 20px;
+      margin-left: 12px;
+    }
   }
   &__list{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 42px;
     grid-row-gap: 36px;
+    @include breakpoint($mobile-bp) {
+      grid-template-columns: 1fr;
+      grid-row-gap: 15px;
+    }
   }
   &__item{
       display: flex;
@@ -39,5 +32,8 @@
     justify-content: space-between;
     border: 1px solid#32323D;
     padding: 24px;
+    @include breakpoint($mobile-bp) {
+      padding: 12px;
+    }
   }
 }
