--- a/src/scss/sections/_products.scss
+++ b/src/scss/sections/_products.scss
@@ -1,23 +1,5 @@
 .products {
     padding: 70px 0;
-    &__subtitle {
-        font-family: $urbanist-semiBold, $sans-serif;
-        font-size: 18px;
-        line-height: 20px;
-        color: $light-brown;
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: 12px;
-    }
-    &__title {
-        font-family: $righteous-regular, $sans-serif;
-        font-size: 48px;
-        line-height: 50px;
-        color: $white;
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: 56px;
-    }
     &__slider {
         display: flex;
         justify-content: space-between;
@@ -37,6 +19,11 @@
         &-body {
             text-align: center;
             padding: 48px 48px 40px;
+            @include breakpoint($mobile-bp) {
+                font-size: 30px;
+                line-height: 32px;
+                padding: 0;
+            }
         }
         &-image {
             margin-bottom: 38px;
@@ -66,6 +53,9 @@
             color: $white;
             text-transform: uppercase;
             margin-bottom: 20px;
+            @include breakpoint($mobile-bp) {
+                font-size: 20px;
+            }
         }
         &-price {
             font-family: $inter-regular, $sans-serif;
