--- a/src/scss/sections/_reservation.scss
+++ b/src/scss/sections/_reservation.scss
@@ -4,43 +4,37 @@
   &__container {
     max-width: 1200px;
   }
-
-  &__subtitle {
-    font-family: $urbanist-semiBold, $sans-serif;
-    font-size: 18px;
-    line-height: 20px;
-    color: $light-brown;
-    text-align: center;
-    margin-bottom: 12px;
-  }
-
-  &__title {
-    font-family: $righteous-regular, $sans-serif;
-    font-size: 48px;
-    line-height: 50px;
-    color: $white;
-    text-align: center;
-    margin-bottom: 56px;
-  }
-
   &__wrapper {
     background-color: $second-brown;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    @include breakpoint($mobile-bp) {
+      flex-direction: column;
+      justify-content: normal;
+    }
   }
 
   &__left {
-    background-image: url(/image/map.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
     width: 50%;
+    @include breakpoint($mobile-bp) {
+      height: 400px;
+      width: 100%;
+    }
   }
+&__map{
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
 
   &__right {
     padding: 72px 48px;
     width: 50%;
+    @include breakpoint($mobile-bp) {
+     width: 100%;
+      padding: 35px 5px;
+    }
   }
 
   &__field {
